# argus-ai

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
argus/: __init__.py  cli.py
argus/domain_packs/: __init__.py
argus/domain_packs/supply_chain/: __init__.py  kg_adapter.py
argus/domain_packs/supply_chain/data/: __init__.py  loaders.py  schemas.py
argus/domain_packs/supply_chain/data/sources/: __init__.py  _http.py  _paths.py  edgar.py  gdelt.py  kaggle.py
argus/domain_packs/supply_chain/evaluation/: __init__.py
argus/domain_packs/supply_chain/models/: __init__.py
argus/domain_packs/supply_chain/prompts/: __init__.py
argus/platform_core/: __init__.py
argus/platform_core/api/: __init__.py  main.py
argus/platform_core/features/: __init__.py
argus/platform_core/hitl/: __init__.py
argus/platform_core/ingestion/: __init__.py  base.py  structured.py  text.py  time_series.py
argus/platform_core/kg/: __init__.py  base.py  builder.py  factory.py  neo4j_backend.py  networkx_backend.py  schema.py
argus/platform_core/models/: __init__.py
argus/platform_core/rag/: __init__.py
ci/: README.md
ci/scripts/: check_spdx.py
configs/: default.yaml
docs/: PROJECT_CONTEXT.md  architecture.md  data_sources.md  kg.md  responsible_ai.md
frontend/: README.md  app.py
infra/docker/: Dockerfile
infra/k8s/: README.md
infra/terraform/: README.md  compute.tf  data.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: __init__.py  build_fixtures.py  download_data.py
tests/: conftest.py  test_cli.py
tests/domain_packs/supply_chain/data/: test_loaders.py  test_schemas.py
tests/domain_packs/supply_chain/data/sources/: test_edgar.py  test_gdelt.py  test_http.py  test_kaggle.py  test_paths.py
tests/domain_packs/supply_chain/kg/: fixtures.py  test_adapter.py  test_end_to_end_ingest.py  test_flagship_cascade.py  test_flagship_subgraph.py
tests/fixtures/ingestion/structured/: bad_missing_id.csv  orders.csv  semicolon_delimited.csv
tests/fixtures/ingestion/text/: article_001.txt  article_002.txt  not_a_txt.md
tests/fixtures/ingestion/time_series/: naive_timestamps.csv  shipments.csv
tests/fixtures/supply_chain/: events.csv  orders.csv  shipments.csv  suppliers.csv
tests/platform_core/api/: test_main.py
tests/platform_core/ingestion/: test_base.py  test_structured.py  test_text.py  test_time_series.py
tests/platform_core/kg/: conftest.py  test_backend_parity.py  test_builder.py  test_factory.py  test_neo4j_backend.py  test_networkx_backend.py  test_schema.py
tests/scripts/: test_build_fixtures.py  test_download_data.py
